# Ngrams

./: .gitignore  CMakeLists.txt  NgramTree.cpp  NgramTree.h  README  compile.sh  gen_submit.sh  main.cpp  run.sh  test.txt
src/: Constants.h  DataPipe.cpp  DataPipe.h  HashFunctions.cpp  HashFunctions.h  HashTable.cpp  HashTable.h  NgramTree.cpp  NgramTree.h  Node.cpp  Node.h  ProcessingThread.cpp  ProcessingThread.h  Queue.cpp  Queue.h  ResultPipe.cpp  ResultPipe.h  Solver.cpp  Solver.h  SuffixList.cpp  SuffixList.h  main.cpp  test.txt  thpool.c
src/change/: ChangePool.cpp  ChangePool.h  ChangeThread.cpp  ChangeThread.h
src/process/: TextProcessor.cpp  TextProcessor.h
submit/: README  compile.sh  compile_log  gen_submit.sh
